# mpd_info

./: .gitignore  Makefile.am  Readme.org  configure.ac
etc/: mpd_info.conf
src/: debug.h  mpd_info.c  mpd_info.h  parse_config.c  parse_config.h
